# services/auth-service/docs/swagger.json
@@ -1,7 +1,6 @@
 {
     "schemes": [
-        "http",
-        "https"
+        "http"
     ],
     "swagger": "2.0",
     "info": {
@@ -18,7 +17,7 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "localhost:8081",
     "basePath": "/api",
     "paths": {
         "/auth/forgot-password": {
